Fix Academic Styling and overflow

--- a/src/Components/Achievements/Achievements.css
+++ b/src/Components/Achievements/Achievements.css
@@ -27,7 +27,7 @@
   height: 30em;
 }
 
-@media only screen and (max-width: 768px) {
+@media only screen and (max-width: 992px) {
   .TabsContentExempt {
     height: 100%;
   }
